Archive2/47/f1b2110d3af4a1/output
main.cpp:10:5: error: redefinition of 'arr' with a different type: 'int' vs 'int []'
int arr = {1,2,3};
    ^
main.cpp:1:12: note: previous definition is here
extern int arr[];
           ^
1 error generated.
